tests/fail/call_nonexistant_function.dode

fn main() {
    return this_function_does_not_exist(1,2,3);
}
